# omnirun

./: .envrc  .gitignore  AGENTS.md  DESIGN.md  README.md  TESTING.md  flake.nix  main.py  pyproject.toml
.claude/skills/omnirun/: SKILL.md
.github/workflows/: checks.yml  ci.yml  publish.yml
chaos/: .gitignore  Dockerfile  README.md  chaos_driver.py  config.toml  diag_pull.py  entrypoint.sh  run.sh  ssh-wrapper.sh
docs/: deploy-acceptance.md  deploy.md
docs/failure-analysis/: 2026-07-14-session-log-triage.md
docs/redesign/: CONFORMANCE.md  DEPLOY-V2.md  DESIGN-V2.md  ENGINE.md  FOLLOWUPS.md  REQUIREMENTS.md  tick-anatomy.md
docs/redesign/mined/: consumers.md  git-issues.md  hetzner.md  local-sessions.md  session-seed.md
docs/superpowers/plans/: 2026-07-11-phase1-discovery.md  2026-07-11-phase2-state-layer.md  2026-07-11-phase3-scheduler.md  2026-07-12-phase4-lifecycle.md  2026-07-12-phase5-central-daemon.md  2026-07-14-budget-readd-and-live-regression.md  2026-07-14-lifecycle-unification.md
docs/superpowers/specs/: 2026-07-11-omnirun-scheduler-redesign-design.md  2026-07-13-ssh-everywhere-notebook-transport-design.md  2026-07-14-omnirun-lifecycle-unification-design.md
formal/: Main.lean  OmnirunFormal.lean  README.md  lake-manifest.json  lakefile.toml
formal/OmnirunFormal/: Chooser.lean  Exec.lean  Model.lean  Proofs.lean
nix/: colab-cli.nix  kaggle.nix  module.nix
research/: colab-kaggle.md  gpu-marketplaces.md  launcher-landscape.md  ml-job-queues.md  slurm-ssh.md
scripts/: check-version.sh  my_script.py  pre-push
skills/: README.md
src/omnirun/: __init__.py  bootstrap.py  budget.py  chooser.py  cli.py  client.py  config.py  control.py  daemon.py  deploykey.py  factstore.py  groups.py  logingest.py  logstream.py  models.py  progress.py  queue.py  repo.py  scheduler.py  sentinels.py  sshconn.py  staging.py  store.py  transport.py  validator.py  wire.py
src/omnirun/backends/: __init__.py  base.py  colab.py  jobdir.py  kaggle.py  local.py  marketplace.py  runpod.py  slurm.py  ssh.py  tarsafe.py  thunder.py  vast.py
src/omnirun/endpoints/: __init__.py  (+1 more)
tests/: conftest.py  enginefakes.py  fakes.py  test_backend_discover.py  test_bootstrap.py  test_budget.py  test_budget_invariants.py  test_chooser.py  test_cli.py  test_client_e2e.py  test_colab.py  test_colab_status_retry.py  test_config.py  test_control_e2e.py  test_core_purity.py  test_daemon_http.py  test_daemon_remote.py  test_deploykey.py  test_endpoints.py  test_engine_pass.py  test_engine_restart.py  test_engine_shutdown.py  test_engine_stream.py  test_engine_workitems.py  test_execlayer_ssh.py  test_factstore.py  test_groups.py  test_jobdir_logs.py  test_jobdir_pushrace.py  test_kaggle.py  test_kaggle_discover.py  test_local_backend.py  test_logingest.py  test_logstream.py  test_marketplaces.py  test_models_facts.py  test_models_scheduler.py  test_progress.py  test_provider_adapter.py  test_queue.py  (+25 more)
tests/conformance/: test_enumerate.py  test_provider_conformance.py
tests/live/: conftest.py  test_live_colab.py  test_live_kaggle.py  test_live_slurm.py
(+30 files in other folders)
