[project]
name = "omnirun"
version = "0.5.8"
description = "Run jobs from your repo anywhere: Slurm over SSH, any SSH box, Kaggle, Colab, or marketplace GPUs"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Dmitrii Mukhutdinov", email = "flyingleafe@gmail.com" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
kaggle = ["kaggle>=2.2"]
colab = ["google-colab-cli>=0.6"]
postgres = ["psycopg[binary]>=3.1"]
daemon = ["bottle>=0.13"]
all = ["omnirun[kaggle,colab,postgres,daemon]"]

[project.scripts]
omnirun = "omnirun.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "kaggle>=2.2",
    "hypothesis>=6.100",
    "bottle>=0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omnirun"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Live tests hit real backends and are OFF by default (so `pytest` and CI stay
# green with no credentials). Run them explicitly: `pytest -m live`, or per
# backend `pytest -m "live and kaggle"`. When selected they FAIL (never skip) if
# the required creds/config are absent — missing coverage must be loud.
addopts = "-m 'not live'"
markers = [
    "integration: needs docker or network (deselect with '-m \"not integration\"')",
    "live: hits a real backend; off by default, fails (not skips) without creds",
    "slurm: live test against a Slurm cluster (set OMNIRUN_TEST_SLURM_BACKEND)",
    "colab: live test against Colab (needs google-colab-cli auth)",
    "kaggle: live test against Kaggle (needs kaggle credentials)",
]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
include = ["src", "tests"]
